--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 
                 <div class="col-md-6" class="informacoes">
 
-                    <h1 data-aos="slide-right" data-aos-delay="400" class="nome">Tássio Fernandes</h1>
-                    <p data-aos="slide-right" data-aos-delay="500" class="descricao-profissao">Desenvolvedor Web</p>
-                    <ul data-aos="slide-right" data-aos-delay="600" class="lista-redes-sociais">
+                    <h1 data-aos="slide-right" class="nome">Tássio Fernandes</h1>
+                    <p data-aos="slide-right" class="descricao-profissao">Desenvolvedor Web</p>
+                    <ul data-aos="slide-right" class="lista-redes-sociais">
 
                         <abbr title="Linkedin">
 
@@ -146,7 +146,7 @@
 
                 </div>
 
-                <div class="col-md-6" class="informacoes" data-aos="slide-left">
+                <div class="col-md-6" class="informacoes">
 
                     <img class="img-fluid" style="height: 95%; width: 450px; transform: scale(1.2);" src="src/images/ilustracao-home-page.webp"
                         alt="Personagem da imagem da homepage na mesa">
