--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 
                 <div class="col-md-6" class="informacoes">
 
-                    <h1 data-aos="slide-right" class="nome">Tássio Fernandes</h1>
-                    <p data-aos="slide-right" class="descricao-profissao">Desenvolvedor Web</p>
-                    <ul data-aos="slide-right" class="lista-redes-sociais">
+                    <h1 class="nome">Tássio Fernandes</h1>
+                    <p class="descricao-profissao">Desenvolvedor Web</p>
+                    <ul class="lista-redes-sociais">
 
                         <abbr title="Linkedin">
 
@@ -138,7 +138,7 @@
 
                     </ul>
 
-                    <div class="botao-baixar-cv" data-aos="fade-in" data-aos-delay="850">
+                    <div class="botao-baixar-cv">
 
                         <a download href="src/arquivos/curriculo.pdf" class="btn btn-primary">Baixar CV</a>
 
