--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
     <div id="skills-area">
 
-        <div class="container" data-aos="slide-right">
+        <div class="container" data-aos="fade-in" data-aos-delay="100">
 
             <div class="row">
                 <div class="col-12">
