--- a/index.html
+++ b/index.html
@@ -179,12 +179,8 @@
                         Federal do Amapá (Unifap) e também estagiário de Sistemas no Tribunal de Justiça do Estado do
                         Amapá (TJAP). Tenho um grande interesse pela área de programação, construção de softwares e
                         Desenvolvimento Web.</p>
-                    <p class="descricao">Como um entusiasta de programação, estou sempre aberto a aprender novas
-                        linguagens e ferramentas, mas atualmente estou focado em aprimorar minhas habilidades em Python,
-                        Java, JavaScript, TypeScript, Bootstrap, Flask e Banco de dados. Além disso, estudo linguagens
-                        de Desenvolvimento Web, como HTML5 e CSS3.</p>
-                    <p class="descricao">Estou empolgado para compartilhar meu conhecimento e experiência com todos
-                        vocês. Vamos juntos explorar o mundo da tecnologia e alcançar grandes realizações!</p>
+                    <p class="descricao">Como desenvolvedor web apaixonado, concentro-me em transformar ideias em soluções digitais incríveis. Minha jornada na programação é marcada pela busca constante por conhecimento, tendo habilidades em Python, Java, HTML5, CSS3, JavaScript, TypeScript, SQL. Ademais, tenho experiência em frameworks como Flask, Spring Boot e bibliotecas como Bootstrap, desenvolvendo aplicações robustas e visualmente atraentes.</p>
+                    <p class="descricao">Estou animado para compartilhar meu conhecimento e experiência com todos vocês. Vamos explorar juntos o mundo da tecnologia e alcançar grandes realizações! Sua participação é fundamental, e estou ansioso para trocar ideias e aprendizados ao longo desse caminho. Vamos seguir em frente e construir algo incrível juntos!</p>
 
                 </div>
 
@@ -403,7 +399,7 @@
 
                 <div id="mainSlider" class="carousel slide" data-bs-ride="carousel" style="transform: scale(0.89); ">
 
-                    <div class="carousel-inner" data-aos="slide-left">
+                    <div class="carousel-inner" data-aos="fade-in" data-aos-delay="200">
                     
                         <!----- PRIMEIRO CARD / PLANTEL LIVERPOOL ----->
 
