--- a/index.html
+++ b/index.html
@@ -470,6 +470,40 @@
 
                         </div>
 
+                        <!-----  CARD / API COTAÇÕES ----->
+
+                        <div class="carousel-item">
+
+                            <div class="col-12 mx-auto w-50">
+
+                                <div class="card">
+
+                                    <img src="src/images/api-cotacoes.jpg" alt="card cotacoes"
+                                        class="card-img-top">
+
+                                    <div class="card-body">
+
+                                        <h5 class="card-title">API de cotações</h5> <br>
+
+                                        <a href="https://github.com/26Tassiofernandes/api-cotacoes" target="_blank"
+                                            rel="external" class="btn btn-primary" style="width: 100%;">Visitar</a> <br><br>
+                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-cotacoes"
+                                            role="button" aria-expanded="false" aria-controls="collapseExample" style="width: 100%;">Ver descrição</a>
+
+                                        <div class="collapse" id="descricao-card-cotacoes"> <br>
+
+                                            <p class="card-text">Este projeto envolve o desenvolvimento de um script que faz uma requisição a uma API e retorna as cotações das principais moedas do mercado.</p>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
                         <!--  TERCEIRO / PROJETO TERROR -->
 
                         <div class="carousel-item">
