--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 <div class="container container-experiencia" data-aos="slide-right"> <!-- PRIMEIRO CONTAINER -->
 
                     <h3 class="titulo-experiencias"><strong><a href="https://www.linkedin.com/company/tjap-oficial/" target="_blank" rel="external"><i class="bi bi-building-fill"></i>Tribunal de Justiça do Estado do Amapá</a></strong></h3> <br>
-                    <p class="descricao-experiencia"><strong>Função</strong>: Atualmente, estou desempenhando o papel de estagiário de Desenvolvimento Web no Tribunal de Justiça do Estado do Amapá. Minha principal responsabilidade é contribuir para o desenvolvimento e implementação de aplicações e soluções tecnológicas utilizando tecnologias web e práticas de programação modernas que atendam às demandas específicas da empresa.</p>
+                    <p class="descricao-experiencia"><strong>Função</strong>: Atualmente, estou desempenhando o papel de estagiário de Desenvolvimento Web no Tribunal de Justiça do Estado do Amapá. Minha principal responsabilidade é contribuir para o desenvolvimento e implementação de aplicações back-end utilizando práticas de programação modernas que atendam às demandas específicas da empresa.</p>
                     <p class="descricao-experiencia"><strong>Competências</strong>: API REST · JPA (Java Persistence API) · Postman API ·
                         Algoritmos · Programação (computação) · SQL · Java · Banco de dados</p>
                     <p class="descricao-experiencia"><i class="fas fa-check"></i>2023 - Presente</p>
