--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 
                                 <div class="card">
 
-                                    <img src="src/images/api-cotacoes.jpg" alt="card cotacoes"
+                                    <img src="src/images/api-cotacoes.png" alt="card cotacoes"
                                         class="card-img-top">
 
                                     <div class="card-body">
