--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
                 <div class="col-12">
 
-                    <h3 class="experiencia-title" style="text-align: center;"><strong>Experiência</strong></h3> <br><br>
+                    <h3 class="experiencia-title" style="text-align: center; color: white;"><strong>Experiência</strong></h3> <br><br>
 
                 </div>
 
@@ -741,7 +741,7 @@
 
                 <div class="col-12">
 
-                    <h3 class="contato-title" style="text-align: center; margin-bottom: 100px;"><strong>Contato</strong>
+                    <h3 class="contato-title" style="text-align: center; margin-bottom: 100px; color: white;"><strong>Contato</strong>
                     </h3>
 
                 </div>
