--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 <div class="container container-experiencia" data-aos="slide-right"> <!-- PRIMEIRO CONTAINER -->
 
                     <h3 class="titulo-experiencias"><strong><a href="https://www.linkedin.com/company/tjap-oficial/" target="_blank" rel="external"><i class="bi bi-building-fill"></i>Tribunal de Justiça do Estado do Amapá</a></strong></h3> <br>
-                    <p class="descricao-experiencia"><strong>Função</strong>: Atualmente, estou desempenhando o papel de estagiário de Desenvolvimento Web no Tribunal de Justiça do Estado do Amapá. Minha principal responsabilidade é contribuir para o desenvolvimento e implementação de aplicações back-end utilizando práticas de programação modernas que atendam às demandas específicas da empresa.</p>
+                    <p class="descricao-experiencia"><strong>Função</strong>: Atuo como estagiário de Desenvolvimento Web no Tribunal de Justiça do Estado do Amapá, estando envolvido no desenvolvimento e implementação de aplicações back-end, seguindo práticas de programação modernas para atender às demandas específicas da organização.</p>
                     <p class="descricao-experiencia"><strong>Competências</strong>: API REST · JPA (Java Persistence API) · Postman API ·
                         Algoritmos · Programação (computação) · SQL · Java · Banco de dados</p>
                     <p class="descricao-experiencia"><i class="fas fa-check"></i>2023 - Presente</p>
@@ -397,7 +397,7 @@
 
                 <!-- CARROSSEL -->
 
-                <div id="mainSlider" class="carousel slide" data-bs-ride="carousel" style="transform: scale(0.89); ">
+                <div id="mainSlider" class="carousel slide" data-bs-ride="carousel" style="transform: scale(0.80);">
 
                     <div class="carousel-inner" data-aos="fade-in" data-aos-delay="200">
                     
@@ -405,12 +405,11 @@
 
                         <div class="carousel-item active">
 
-                            <div class="col-12 mx-auto w-50">
+                            <div class="col-12 mx-auto w-75">
 
                                 <div class="card">
 
-                                    <img src="src/images/imagem-plantel-liverpool.png" alt="Primeiro card"
-                                        class="card-img-top">
+                                    <img src="src/images/imagem-plantel-liverpool.png" alt="Primeiro card" class="card-img-top img-fluid">
 
                                     <div class="card-body">
 
@@ -440,12 +439,11 @@
 
                         <div class="carousel-item">
 
-                            <div class="col-12 mx-auto w-50">
+                            <div class="col-12 mx-auto w-75">
 
                                 <div class="card">
 
-                                    <img src="src/images/webscraping.png" alt="Segundo card"
-                                        class="card-img-top">
+                                    <img src="src/images/webscraping.png" alt="Segundo card" class="card-img-top img-fluid">
 
                                     <div class="card-body">
 
@@ -474,12 +472,12 @@
 
                         <div class="carousel-item">
 
-                            <div class="col-12 mx-auto w-50">
+                            <div class="col-12 mx-auto w-75">
 
                                 <div class="card">
 
                                     <img src="src/images/api-cotacoes.png" alt="card cotacoes"
-                                        class="card-img-top">
+                                        class="card-img-top img-fluid">
 
                                     <div class="card-body">
 
@@ -508,11 +506,11 @@
 
                         <div class="carousel-item">
 
-                            <div class="col-12 mx-auto w-50">
+                            <div class="col-12 mx-auto w-75">
 
                                 <div class="card">
 
-                                    <img src="src/images/projeto-terror.png" alt="Terceiro card" class="card-img-top" class="img-fluid">
+                                    <img src="src/images/projeto-terror.png" alt="Terceiro card" class="card-img-top img-fluid">
 
                                     <div class="card-body">
 
@@ -542,11 +540,11 @@
 
                         <div class="carousel-item">
 
-                            <div class="col-12 mx-auto w-50">
+                            <div class="col-12 mx-auto w-75">
 
                                 <div class="card">
 
-                                    <img src="src/images/tela-login-animada.png" alt="Quarto card" class="card-img-top" class="img-fluid">
+                                    <img src="src/images/tela-login-animada.png" alt="Quarto card" class="card-img-top img-fluid">
 
                                     <div class="card-body">
 
@@ -576,12 +574,12 @@
 
                         <div class="carousel-item">
 
-                            <div class="col-12 mx-auto w-50">
+                            <div class="col-12 mx-auto w-75">
 
                                 <div class="card">
 
                                     <img src="src/images/projeto-xmen.png" alt="Quinto card"
-                                        class="card-img-top">
+                                        class="card-img-top img-fluid">
 
                                     <div class="card-body">
 
@@ -610,12 +608,12 @@
 
                         <div class="carousel-item">
 
-                            <div class="col-12 mx-auto w-50">
+                            <div class="col-12 mx-auto w-75">
 
                                 <div class="card">
 
                                     <img src="src/images/mini-portfolio.png" alt="Sexto card"
-                                        class="card-img-top">
+                                        class="card-img-top img-fluid">
 
                                     <div class="card-body">
 
@@ -644,12 +642,12 @@
 
                         <div class="carousel-item">
 
-                            <div class="col-12 mx-auto w-50">
+                            <div class="col-12 mx-auto w-75">
 
                                 <div class="card">
 
                                     <img src="src/images/projeto-cordel.png" alt="Sétimo card"
-                                        class="card-img-top">
+                                        class="card-img-top img-fluid">
 
                                     <div class="card-body">
 
@@ -678,12 +676,12 @@
 
                         <div class="carousel-item">
 
-                            <div class="col-12 mx-auto w-50">
+                            <div class="col-12 mx-auto w-75">
 
                                 <div class="card">
 
                                     <img src="src/images/calculadora-imc.png" alt="Oitavo card"
-                                        class="card-img-top">
+                                        class="card-img-top img-fluid">
 
                                     <div class="card-body">
 
