--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tássio Fernandes</title>
+    <title>Portfólio | Tássio Fernandes</title>
     <link rel="shortcut icon" href="src/images/icon-code.png" type="image/x-icon">
 
     <!--Bootstrap, copiamos isso e os scripts abaixo do site oficial do bootstrap-->
