--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 
     <header>
 
-        <div class="container" id="nav-container">
+        <div class="container-fluid" id="nav-container">
 
-            <nav class="navbar navbar-expand-lg fixed-top">
+            <nav class="navbar navbar-expand-lg">
 
                 <a href="#" class="navbar-brand" id="link-brand">
 
                     <img src="src/images/logo-image.png" alt="logo principal do site" id="logo">
-                    <p id="titulo-principal"><strong>Tássio</strong></p>
+                    
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-links"
@@ -163,7 +163,7 @@
 
     <div id="sobre-mim-area">
 
-        <div class="container">
+        <div class="container-fluid">
 
             <div class="row">
 
@@ -766,21 +766,21 @@
 
                         <div class="form-group"> <!-- NOME -->
 
-                            <input type="text" class="form-control" name="nome" id="nome" placeholder="Seu nome"
+                            <input type="text" class="form-control" style="box-shadow: none;" name="nome" id="nome" placeholder="Seu nome"
                                 required>
 
                         </div> <br>
 
                         <div class="form-group"> <!-- Email -->
 
-                            <input type="text" class="form-control" name="email" id="email" placeholder="Seu e-mail"
+                            <input type="text" class="form-control" style="box-shadow: none;" name="email" id="email" placeholder="Seu e-mail"
                                 required>
 
                         </div> <br>
 
                         <div class="form-group"> <!-- Mensagem -->
 
-                            <textarea class="form-control" name="mensagem" id="mensagem" rows="5"
+                            <textarea class="form-control" style="box-shadow: none;" name="mensagem" id="mensagem" rows="5"
                                 placeholder="Digite sua mensagem" required></textarea>
 
                         </div> <br>
