--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         Amapá (TJAP). Tenho um grande interesse pela área de programação, construção de softwares e
                         Desenvolvimento Web.</p>
                     <p class="descricao">Como desenvolvedor web apaixonado, concentro-me em transformar ideias em soluções digitais incríveis. Minha jornada na programação é marcada pela busca constante por conhecimento, tendo habilidades em Python, Java, HTML5, CSS3, JavaScript, TypeScript, SQL. Ademais, tenho experiência em frameworks como Flask, Spring Boot e bibliotecas como Bootstrap, desenvolvendo aplicações robustas e visualmente atraentes.</p>
-                    <p class="descricao">Estou animado para compartilhar meu conhecimento e experiência com todos vocês. Vamos explorar juntos o mundo da tecnologia e alcançar grandes realizações! Sua participação é fundamental, e estou ansioso para trocar ideias e aprendizados ao longo desse caminho. Vamos seguir em frente e construir algo incrível juntos!</p>
+                    <p class="descricao">Estou empolgado para compartilhar meu conhecimento e experiência. Vamos explorar juntos o mundo da tecnologia e alcançar grandes feitos! Sua participação é crucial, ansioso para trocar ideias e aprendermos juntos. Vamos construir algo incrível!</p>
 
                 </div>
 
@@ -210,8 +210,7 @@
                     <i class="fab fa-python" class="icones-tecnologias">
 
                         <h4>Python</h4>
-                        <p>Linguagem versátil e fácil de aprender, amplamente utilizada em desenvolvimento web,
-                            automação e inteligência artificial.</p>
+                        <!-- <p>Linguagem versátil e fácil de aprender, amplamente usada em web, automação e inteligência artificial.</p> -->
 
                     </i>
 
@@ -224,8 +223,7 @@
                     <i class="fab fa-html5">
 
                         <h4>HTML5</h4>
-                        <p>Linguagem de marcação fundamental para estruturar conteúdo em páginas web e deixá-las
-                            interativas e responsivas.</p>
+                        <!-- <p>Marcação fundamental para estruturar conteúdo em páginas web, tornando-as interativas e responsivas.</p> -->
 
                     </i>
 
@@ -238,8 +236,7 @@
                     <i class="fab fa-css3">
 
                         <h4>CSS3</h4>
-                        <p>Responsável pela estilização e apresentação visual em páginas web, proporcionando uma
-                            experiência visual atraente aos usuários.</p>
+                        <!-- <p>Responsável pela estilização visual em páginas web, proporcionando uma experiência atraente aos usuários.</p> -->
 
                     </i>
 
@@ -253,8 +250,7 @@
                     <i class="fab fa-js-square">
 
                         <h4>JavaScript</h4>
-                        <p>É uma linguagem de programação do lado do cliente amplamente usada para tornar as páginas web
-                            interativas.</p>
+                        <!-- <p>Linguagem de programação do lado do cliente para tornar páginas web interativas.</p> -->
 
                     </i>
 
@@ -268,8 +264,7 @@
                     <i class="fab fa-java">
 
                         <h4>Java</h4>
-                        <p>Linguagem orientada a objetos, conhecida por sua portabilidade e ampla aplicação em
-                            desenvolvimento empresarial e móvel.</p>
+                        <!-- <p>Linguagem orientada a objetos, conhecida por sua portabilidade e aplicação em desenvolvimento empresarial e móvel.</p> -->
 
                     </i>
 
@@ -283,8 +278,7 @@
                     <i class="fab fa-bootstrap">
 
                         <h4>Bootstrap</h4>
-                        <p>Frameworkd front-end usado para o desenvolvimento de designs atraentes e responsivos para
-                            sites e aplicativos web. </p>
+                        <!-- <p>Framework front-end para designs atraentes e responsivos em sites e aplicativos web.</p> -->
 
                     </i>
 
@@ -297,8 +291,7 @@
                     <i class="fas fa-database">
 
                         <h4>Banco de dados</h4>
-                        <p>Bancos de dados são essenciais para armazenar, organizar e recuperar informações, permitindo
-                            a manipulação eficiente de dados em aplicações.</p>
+                        <!-- <p>Essenciais para armazenar, organizar e recuperar informações, permitindo a manipulação eficiente de dados em aplicações.</p> -->
 
                     </i>
 
@@ -311,8 +304,7 @@
                     <i class="fab fa-github">
 
                         <h4>Github</h4>
-                        <p>GitHub é uma plataforma de hospedagem de código-fonte que facilita o trabalho colaborativo em
-                            projetos de desenvolvimento de software.</p>
+                        <!-- <p>Plataforma de hospedagem de código-fonte que facilita o trabalho colaborativo em projetos de software.</p> -->
 
                     </i>
 
@@ -325,8 +317,20 @@
                     <i class="fab fa-git-alt">
 
                         <h4>Git</h4>
-                        <p>Sistema de controle de versão distribuído, usado para rastrear alterações no código-fonte
-                            durante o desenvolvimento de software.</p>
+                        <!-- <p>Sistema de controle de versão distribuído para rastrear alterações no código-fonte durante o desenvolvimento de software.</p> -->
+
+                    </i>
+
+                </div>
+
+                <!-- PHP-->
+
+                <div class="col-md-4 service-box">
+
+                    <i class="fab fa-php">
+
+                        <h4>PHP</h4>
+                        <!-- <p>Sistema de controle de versão distribuído para rastrear alterações no código-fonte durante o desenvolvimento de software.</p> -->
 
                     </i>
 
@@ -355,13 +359,12 @@
                 <div class="container container-experiencia" data-aos="slide-right"> <!-- PRIMEIRO CONTAINER -->
 
                     <h3 class="titulo-experiencias"><strong><a href="https://www.linkedin.com/company/tjap-oficial/" target="_blank" rel="external"><i class="bi bi-building-fill"></i>Tribunal de Justiça do Estado do Amapá</a></strong></h3> <br>
-                    <p class="descricao-experiencia"><strong>Função</strong>: Atuo como estagiário de Desenvolvimento Web no Tribunal de Justiça do Estado do Amapá, estando envolvido no desenvolvimento e implementação de aplicações back-end, seguindo práticas de programação modernas para atender às demandas específicas da organização.</p>
+                    <p class="descricao-experiencia"><strong>Função</strong>: Atuo como estagiário de Desenvolvimento Web no Tribunal de Justiça do Estado do Amapá, estando envolvido no desenvolvimento e implementação de aplicações back-end e front-end, seguindo práticas de programação modernas para atender às demandas específicas da organização.</p>
                     <p class="descricao-experiencia"><strong>Competências</strong>: API REST · JPA (Java Persistence API) · Postman API ·
-                        Algoritmos · Programação (computação) · SQL · Java · Banco de dados</p>
+                        Algoritmos · Programação (computação) · SQL · Java · PHP · Banco de dados</p>
                     <p class="descricao-experiencia"><i class="fas fa-check"></i>2023 - Presente</p>
 
                 </div>
-
 
                 <div class="container container-experiencia" data-aos="slide-left"> <!-- SEGUNDO CONTAINER -->
 
@@ -749,7 +752,7 @@
 
                 <div class="col-md-6" style="display: flex; justify-content: center; align-items: center; height: 50vh;">
                     <!-- A classe img-fluid deixa a imagem responsiva e adaptável para diferentes tipos de tela -->
-                    <img class="img-fluid" data-aos="slide-right" style="margin-bottom: 90px;" src="src/images/ilustracao-contato.webp"
+                    <img class="img-fluid" data-aos="slide-right" style="margin-bottom: 90px;" src="src/images/foto-contato.png"
                         alt="Imagem ilustrativa de contato">
 
 
