--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
                 <div class="col-md-6" class="informacoes" data-aos="slide-left">
                     <h3 class="about-title">Sobre mim</h3>
                     <p class="descricao">Sou um estudante de Bacharelado em Ciência da Computação na Universidade
-                        Federal do Amapá (Unifap) e também estagiário de Sistemas no Tribunal de Justiça do Estado do
-                        Amapá (TJAP). Tenho um grande interesse pela área de programação, construção de softwares e
-                        Desenvolvimento Web.</p>
-                    <p class="descricao">Como desenvolvedor web apaixonado, concentro-me em transformar ideias em soluções digitais incríveis. Minha jornada na programação é marcada pela busca constante por conhecimento, tendo habilidades em Python, Java, HTML5, CSS3, JavaScript, TypeScript, SQL. Ademais, tenho experiência em frameworks como Flask, Spring Boot e bibliotecas como Bootstrap, desenvolvendo aplicações robustas e visualmente atraentes.</p>
-                    <p class="descricao">Estou empolgado para compartilhar meu conhecimento e experiência. Vamos explorar juntos o mundo da tecnologia e alcançar grandes feitos! Sua participação é crucial, ansioso para trocar ideias e aprendermos juntos. Vamos construir algo incrível!</p>
+                    Federal do Amapá (Unifap) e também estagiário de Sistemas no Tribunal de Justiça do Estado do
+                    Amapá (TJAP). Tenho um grande interesse pela área de programação, construção de softwares e
+                    Desenvolvimento Web.</p>
+                    <p class="descricao">Como desenvolvedor web apaixonado, concentro-me em transformar ideias em soluções digitais incríveis. Minha jornada na programação é marcada pela busca constante por conhecimento, tendo habilidades em Python, Java, HTML5, CSS3, JavaScript, PHP, SQL. Ademais, tenho experiência em frameworks como Flask, Spring Boot e bibliotecas como Bootstrap, desenvolvendo aplicações robustas e visualmente atraentes.</p>
+                    <p class="descricao">Estou empolgado para compartilhar meu conhecimento e experiência. Vamos explorar juntos o mundo da tecnologia e alcançar grandes feitos. Vamos construir algo incrível!</p>
 
                 </div>
 
@@ -752,7 +752,7 @@
 
                 <div class="col-md-6" style="display: flex; justify-content: center; align-items: center; height: 50vh;">
                     <!-- A classe img-fluid deixa a imagem responsiva e adaptável para diferentes tipos de tela -->
-                    <img class="img-fluid" data-aos="slide-right" style="margin-bottom: 90px;" src="src/images/foto-contato.png"
+                    <img class="img-fluid" data-aos="slide-right" style="margin-bottom: 90px;" src="src/images/ilustracao-contato.webp"
                         alt="Imagem ilustrativa de contato">
 
 
