--- a/index.html
+++ b/index.html
@@ -118,20 +118,20 @@
                         <abbr title="Linkedin">
 
                             <li><a href="https://www.linkedin.com/in/tassiofernandes26/" target="_blank"
-                                    rel="external"><img src="src/images/linkedin-logo.png"
+                                    rel="external"><img class="img-fluid" src="src/images/linkedin-logo.png"
                                         alt="logo da rede social linkedin"></img></a></li>
 
                         </abbr>
 
                         <abbr title="Github">
-                            <li><a href="https://github.com/26Tassiofernandes" target="_blank" rel="external"><img
-                                        style="filter: invert(1);" src="src/images/github-logo.svg"
+                            <li><a href="https://github.com/26Tassiofernandes" target="_blank" rel="external"><img class="img-fluid"
+                                        style="width: 35px;" src="src/images/github-logo.png"
                                         alt="logo da rede social github"></img></a></li>
                         </abbr>
 
                         <abbr title="Instagram">
-                            <li><a href="https://instagram.com/26tassio" target="_blank" rel="external"><img
-                                        src="src/images/instagram-logo.svg"
+                            <li><a href="https://instagram.com/26tassio" target="_blank" rel="external"><img class="img-fluid"
+                                        src="src/images/instagram-logo.png"
                                         alt="logo da rede social instagram"></img></a></li>
                         </abbr>
 
@@ -148,7 +148,7 @@
 
                 <div class="col-md-6" class="informacoes">
 
-                    <img class="img-fluid" style="height: 95%; width: 450px; transform: scale(1.2);" src="src/images/ilustracao-home-page.webp"
+                    <img id="imagem-homepage" class="img-fluid" style="height: 95%; width: 450px; transform: scale(1.2);" src="src/images/ilustracao-home-page.webp"
                         alt="Personagem da imagem da homepage na mesa">
 
                 </div>
@@ -170,7 +170,6 @@
                 <div class="col-md-6" class="informacoes">
                     <img class="img-fluid" data-aos="slide-right" data-aos-delay="300" style="height: 100%;" src="src/images/ilustracao-about-me.webp"
                         alt="Ilustração de um personagem programando">
-
                 </div>
 
                 <div class="col-md-6" class="informacoes" data-aos="slide-left">
@@ -811,22 +810,21 @@
 
                 <abbr title="Linkedin">
 
-                    <li><a href="https://www.linkedin.com/in/tassiofernandes26/" target="_blank" rel="external"><img
+                    <li><a href="https://www.linkedin.com/in/tassiofernandes26/" target="_blank" rel="external"><img class="img-fluid"
                                 src="src/images/linkedin-logo.png" alt="logo da rede social linkedin"></img></a></li>
 
                 </abbr>
 
                 <abbr title="Github">
-                    <li><a href="https://github.com/26Tassiofernandes" target="_blank" rel="external"><img
-                                style="filter: invert(1);" src="src/images/github-logo.svg"
+                    <li><a href="https://github.com/26Tassiofernandes" target="_blank" rel="external"><img class="img-fluid"
+                                style="width: 30px;" src="src/images/github-logo.png"
                                 alt="logo da rede social github"></img></a></li>
                 </abbr>
 
                 <abbr title="Instagram">
-                    <li><a href="https://instagram.com/26tassio" target="_blank" rel="external"><img
-                                src="src/images/instagram-logo.svg" alt="logo da rede social instagram"></img></a></li>
+                    <li><a href="https://instagram.com/26tassio" target="_blank" rel="external"><img class="img-fluid"
+                                src="src/images/instagram-logo.png" alt="logo da rede social instagram"></img></a></li>
                 </abbr>
-
 
             </ul>
 
