--- a/index.html
+++ b/index.html
@@ -323,17 +323,17 @@
                 </div>
 
                 <!-- PHP-->
-
+<!-- 
                 <div class="col-md-4 service-box">
 
                     <i class="fab fa-php">
 
                         <h4>PHP</h4>
-                        <!-- <p>Sistema de controle de versão distribuído para rastrear alterações no código-fonte durante o desenvolvimento de software.</p> -->
+                         <p>Sistema de controle de versão distribuído para rastrear alterações no código-fonte durante o desenvolvimento de software.</p> 
 
                     </i>
 
-                </div>
+                </div> -->
 
             </div>
 
